<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/weather_frame">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_add_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_add" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Malang" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_more_vert" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weather_img"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/main_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@+id/weather_img"
            tools:text="Sunday | Nov 14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:textSize="72sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            tools:text="24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:layout_constraintTop_toBottomOf="@+id/date"
            tools:text="°" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/temperature"
            tools:text="Heavy rain" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/conditions"/>

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:weightSum="2"
            android:layout_marginHorizontal="22dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/navigation_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_navigation"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:rotation="-45"
                    android:src="@drawable/ic_navigation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/speed_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="3.7 km/h"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/img_navigation"
                    app:layout_constraintTop_toTopOf="@+id/img_navigation" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_navigation"
                    app:layout_constraintStart_toStartOf="@+id/speed_wind" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chance_of_rain_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_chance_of_rain"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:rotation="-45"
                    android:src="@drawable/ic_navigation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chance_of_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="74%"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/img_chance_of_rain"
                    app:layout_constraintTop_toTopOf="@+id/img_chance_of_rain" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/chance_of_rain"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_chance_of_rain"
                    app:layout_constraintStart_toStartOf="@+id/chance_of_rain" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:weightSum="2"
            android:layout_marginHorizontal="22dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/container1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pressure_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_pressure"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:rotation="-45"
                    android:src="@drawable/ic_navigation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="1010 mbar"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/img_pressure"
                    app:layout_constraintTop_toTopOf="@+id/img_pressure" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_pressure"
                    app:layout_constraintStart_toStartOf="@+id/pressure" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/humidity_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_humidity"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:rotation="-45"
                    android:src="@drawable/ic_navigation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Humidity 83%"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/img_humidity"
                    app:layout_constraintTop_toTopOf="@+id/img_humidity" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_humidity"
                    app:layout_constraintStart_toStartOf="@+id/humidity" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>